# CppCmb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cppcmb.hpp  merge_source.py
examples/: CMakeLists.txt  anbn.cpp  expression.cpp
include/cppcmb/: cppcmb.hpp  reader.hpp  result.hpp
include/cppcmb/utils/: assert.hpp  fwd.hpp  requires.hpp
source/: apply_value.hpp  combinator.hpp  cppcmb.hpp  detail.hpp  lexer.hpp  maybe.hpp  memo_context.hpp  parser.hpp  parsers.hpp  product.hpp  reader.hpp  result.hpp  sum.hpp  token.hpp  transformations.hpp
source/detail/: crtp.hpp  is_detected.hpp  is_specialization.hpp  macros.hpp  remove_cvref.hpp
source/parsers/: action.hpp  alt.hpp  combinator.hpp  drec_packrat.hpp  eager_alt.hpp  end.hpp  epsilon.hpp  irec_packrat.hpp  many.hpp  many1.hpp  one.hpp  opt.hpp  packrat.hpp  regex.hpp  rule.hpp  seq.hpp  todo.hpp
source/transformations/: filter.hpp  select.hpp  todo.hpp
tests/: CMakeLists.txt  test_comptime.cpp  test_fundamentals.cpp  test_wiki_code.cpp
